add more numerical code

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,5 +5,6 @@
         "heuns",
         "kuttas",
         "runge"
-    ]
+    ],
+    "editor.fontFamily": "\"jetbrains mono\", 'Courier New', monospace"
 }
